# focused-convolutions

./: README.md  focused-conv-demo.ipynb  focusedconv.py  pyproject.toml
.github/workflows/: autopep8.yml  build_release.yml  pytest.yml  tests_linting.yml
src/: focused-conv-demo.ipynb  utils.py
src/focusedconv/: README.md  __init__.py  aoi.py  areaofinterest.py  conv.py  convolution.py
