[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "focusedconv"
version = "1.0.1"
authors = [
  { name="Caleb Tung", email="tung3@purdue.edu" },
]
description = "Official library for the energy-efficient Focused Convolution"
readme = "src/focusedconv/README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies=[
    "torch>=1.12",
    "matplotlib>=3",
    "scikit-image>=0.18"
]

[project.urls]
"Homepage" = "https://github.com/calebtung/focused-convolutions"
"Bug Tracker" = "https://github.com/calebtung/focused-convolutions/issues"
